--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-wheel
 requests==2.24.0
 ruamel.yaml==0.16.10
 pycryptodome==3.9.8
@@ -6,4 +5,4 @@ python-novaclient==17.2.0
 openstacksdk==0.48.0
 ansible==2.10.0
 Flask==1.1.2
-git+git://github.com/micado-scale/micado-client@develop#egg=micado-client
+git+https://github.com/micado-scale/micado-client@develop#egg=micado-client
