--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ ruamel.yaml==0.16.10
 pycryptodome==3.9.8
 python-novaclient==17.2.0
 openstacksdk==0.48.0
-ansible==2.10.0
+ansible
 Flask==1.1.2
-git+https://github.com/micado-scale/micado-client@develop#egg=micado-client
+git+https://github.com/micado-scale/micado-client
