fix(deploy): make client verify optional

--- a/nginx-verify-client.conf
+++ b/nginx-verify-client.conf
@@ -17,6 +17,8 @@ server {
 server {
   listen        443 ssl;
   server_name   example.com;
+  ssl_verify_client on;
+  ssl_client_certificate /etc/nginx/server.pem;
   ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;    
   include /etc/letsencrypt/options-ssl-nginx.conf;
