feat(deploy): add flags for enabling occo/terra

--- a/openstack_micado_spec.yml
+++ b/openstack_micado_spec.yml
@@ -1,8 +1,10 @@
 properties:
-  auth_url: 
-  project_id: 
+  auth_url:
+  project_id:
   image:
-  flavor: 
-  network: 
+  flavor:
+  network:
   keypair:
   security_group:
+  terraform: False
+  occopus: True
