--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.2"
 services:
   api:
-    image: micado/eec:dev
+    image: micado/eec:0.7
     hostname: eec
     ports:
       - 5000:5000
