--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     - /etc/traefik:/etc/traefik
     - /var/run/docker.sock:/var/run/docker.sock:ro
   api:
-    image: micado/eec:0.7
+    image: micado/eec:0.9
     labels:
       - 'traefik.enable=true'
       - 'traefik.http.routers.my-app.rule=Host(`example.com`)'
@@ -22,7 +22,8 @@ services:
     environment:
       MICADO_CLI_DIR: /etc/micado
       MICADO_VERS: v0.10.0
-      MASTER_SPEC: /etc/eec/micado_spec.yaml
+      MICADO_SPEC: /etc/eec/micado_spec.yaml
+      MICADO_CLOUD_LAUNCHER: cloudbroker
     volumes:
       - /etc/micado:/etc/micado
       - /etc/eec:/etc/eec
