--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ python-novaclient==17.5.0
 openstacksdk==0.57.0
 ansible==4.0.0
 Flask==2.1.0
-git+https://github.com/micado-scale/micado-client@main
+git+https://github.com/micado-scale/micado-client@v0.10.0
