--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-requests==2.25.1
-ruamel.yaml==0.17.7
-pycryptodome==3.10.1
-python-novaclient==17.5.0
-openstacksdk==0.57.0
-ansible==4.0.0
+git+https://github.com/micado-scale/micado-client@v0.11.0
+tinydb==4.7.0
+ruamel.yaml==0.17.21
 Flask==2.1.0
-git+https://github.com/micado-scale/micado-client@v0.10.0
