--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     - /etc/traefik:/etc/traefik
     - /var/run/docker.sock:/var/run/docker.sock:ro
   api:
-    image: micado/eec:0.9
+    image: micado/eec:0.11
     labels:
       - 'traefik.enable=true'
       - 'traefik.http.routers.my-app.rule=Host(`example.com`)'
@@ -21,9 +21,16 @@ services:
       - 5000:5000
     environment:
       MICADO_CLI_DIR: /etc/micado
-      MICADO_VERS: v0.11.0
+      MICADO_VERS: v0.11
       MICADO_SPEC: /etc/eec/micado_spec.yaml
       MICADO_CLOUD_LAUNCHER: cloudbroker
     volumes:
       - /etc/micado:/etc/micado
       - /etc/eec:/etc/eec
+  redis:
+    image: redis:7.0-alpine
+    container_name: redis
+    ports:
+      - 6379:6379
+    volumes:
+      - /etc/eec:/data
